Deployments/adguard/010-Namespace.yaml
# Namespace.yaml sdsdef
apiVersion: v1
kind: Namespace
metadata:
  name: adguard
  labels:
    cert-manager-tls: nekomade-com
