Deployments/adguard/080-Middlewares.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: adguard
  name: passtls
spec:
  passTLSClientCert:
    pem: true
