Deployments/adguard/050-Service.yaml
# This is to set two accessible IP addresses
apiVersion: v1
kind: Service
metadata:
  name: adguard-lb
  namespace: adguard
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ad.nekomade.com
    external-dns.alpha.kubernetes.io/ttl: "120" #optional
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: adguard-server
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-lb-dns
  namespace: adguard
  annotations:
    metallb.universe.tf/allow-shared-ip: "true"
spec:
  type: ClusterIP
#  loadBalancerIP: 158.69.157.242
  ports:
    - name: dns
      port: 53
      protocol: UDP
      targetPort: 53
    - name: httpsdns
      port: 853
      protocol: UDP
      targetPort: 853
  selector:
    app: adguard-server
  externalIPs:
    - 158.69.157.242
