Deployments/adguard/090-Gateway.yaml
apiVersion: networking.x-k8s.io/v1alpha1
kind: Gateway
metadata:
  name: tls-basic
spec:
  gatewayClassName: acme-lb
  listeners:
    - protocol: HTTPS
      port: 443
      hostname: dns.nekomade.com
      tls:
        mode: Passthrough
        certificateRef:
          kind: Secret
          name: nekomade-com-tls
        routeOverride:
          certificate: Deny
      routes:
        kind: HTTPRoute
