Deployments/adguard/060-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-ingress
  namespace: adguard
#  annotations:
#    nginx.ingress.kubernetes.io/auth-tls-secret: adguard/nekomade-com-tls
#    nginx.ingress.kubernetes.io/auth-tls-verify-client: optional_no_ca
#    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: True
spec:
  tls:
  - hosts:
      - ad.nekomade.com
      - dns.nekomade.com
    secretName: nekomade-com-tls
  rules:
    - host: ad.nekomade.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: adguard-http-https
              port:
                number: 8080
    - host: dns.nekomade.com
      http:
        paths:
        - path: /dns-query
          pathType: Prefix
          backend:
            service:
              name: adguard-http-https
              port:
                number: 8443
