Deployments/adguard/070-Routes.yaml
# https://doc.traefik.io/traefik/v2.2/routing/providers/kubernetes-crd/#kind-ingressroute
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-ingressroute
  namespace: adguard
  labels:
    method: traefik
    environment: production
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`dns.nekomade.com`)
    kind: Rule
    middlewares:
    - name: passtls
      namespace: adguard
    services:
    - name: dns-over-https-tcp
      namespace: adguard
      kind: Service
      port: 443
      scheme: https
  - match: Host(`dns.nekomade.com`) && PathPrefix(`/dns-query`)
    kind: Rule
    middlewares:
      - name: passtls
        namespace: adguard
    services:
      - name: dns-over-https-tcp
        namespace: adguard
        kind: Service
        port: 443
        scheme: https
  tls:
    secretName: nekomade-com-tls
    options:
      name: ""
      namespace: adguard
    certResolver: letsencrypt
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: adguard-ingressroute
  namespace: adguard
  labels:
    method: traefik
    environment: production
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`dns.nekomade.com`)
      services:
        - name: dns-over-https-tcp
          namespace: adguard
          port: 443
  tls:
    passthrough: true
    secretName: nekomade-com-tls
    options:
      name: ""
      namespace: adguard
    certResolver: letsencrypt
